objects/Key_Task_to_Feature__c.object
<CustomObject>
    <description>Allow many-to-many relationships between Key Tasks to G.A. and Features</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relate a Key Task to G.A. to a Feature</description>
        <inlineHelpText>Relate a Key Task to G.A. to a Feature</inlineHelpText>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>Key Tasks to Features</relationshipLabel>
        <relationshipName>Key_Tasks_to_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Task_to_G_A__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Key Task to G.A.</label>
        <referenceTo>Key_Task_to_G_A__c</referenceTo>
        <relationshipLabel>Key Tasks to Features</relationshipLabel>
        <relationshipName>Key_Tasks_to_Features</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Key Task to Feature</label>
    <nameField>
        <displayFormat>KTF-{0000}</displayFormat>
        <label>Key Task to Feature Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Tasks to Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>